# Agent-Platform

./: .env.docker-free.example  .env.example  .gitignore  CONTRIBUTING.md  DOCKER_FREE_GUIDE.md  DOCKER_INTEGRATION_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements-docker-free.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
docker/: Dockerfile.sandbox  seccomp-profile.json
examples/: 01_simple_agent.py  02_file_operations.py
scripts/: start-docker-free.bat  start-docker-free.py  test_docker_integration.py
src/agent_platform/: __init__.py  config.py
src/agent_platform/agent_core/: __init__.py  agent.py  factory.py  state.py
src/agent_platform/api/: __init__.py  main.py  models.py
src/agent_platform/cli/: __init__.py
src/agent_platform/llm/: __init__.py  adapter.py  base.py  cost_tracker.py  factory.py
src/agent_platform/plugins/: __init__.py
src/agent_platform/sandbox/: __init__.py  manager.py  mock_manager.py
src/agent_platform/tools/: __init__.py  base.py  file_tools.py  registry.py
src/agent_platform/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_complete_workflows.py
tests/integration/: __init__.py  test_agent_integration.py  test_llm_integration.py
tests/security/: test_security.py
tests/unit/: __init__.py  test_agent.py  test_docker_integration.py  test_llm_adapter.py
