[tool.poetry]
name = "agent-platform"
version = "0.1.0"
description = "A comprehensive platform for building and managing intelligent agents"
authors = ["Sanjay Doppalapudi <sanjayd3028@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "agent_platform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
litellm = "^1.17.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"
docker = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
